MyDev/src/objects/MapContact2Team__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MapContact2Team</relationshipLabel>
        <relationshipName>MapContact2Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MapContact2Team</relationshipLabel>
        <relationshipName>MapContact2Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapContact2Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapContact2Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapContact2Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapContact2Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>